tests/fixtures/invalid/divmod_bytes_float.py
# Cannot call divmod() with Bytes, Float
x = divmod(b"hello", 1.0)
